--- a/bat/rd-mailform.config.json
+++ b/bat/rd-mailform.config.json
@@ -2,7 +2,7 @@
   "useSmtp": false,
   "host": "stmp.gmail.com",
   "port": 465,
-  "username": "demo@gmail.com",
-  "password": "demopassword",
-  "recipientEmail": "demo@gmail.com"
+  "username": "enniosaenz@gmail.com",
+  "password": "ENNJVRSNZ",
+  "recipientEmail": "enniosaenz@gmail.com"
 }
