Cambios en texto e imagenes
CAmbio de imagenes y texto en varias paginas

--- a/bat/rd-mailform.config.json
+++ b/bat/rd-mailform.config.json
@@ -2,7 +2,7 @@
   "useSmtp": false,
   "host": "stmp.gmail.com",
   "port": 465,
-  "username": "enniosaenz@gmail.com",
-  "password": "ENNJVRSNZ",
-  "recipientEmail": "enniosaenz@gmail.com"
+  "username": "ventas@infodesarrollos.com",
+  "password": "",
+  "recipientEmail": "ventas@infodesarrollos.com"
 }
